--- a/BookManager/Presentation/Screen/Login/LoginViewController.storyboard
+++ b/BookManager/Presentation/Screen/Login/LoginViewController.storyboard
@@ -70,7 +70,7 @@
                                                             <constraint firstAttribute="height" constant="24" id="YZr-LY-5yv"/>
                                                             <constraint firstAttribute="width" constant="24" id="mXh-74-Cjt"/>
                                                         </constraints>
-                                                        <state key="normal" image="Check_Off_Box"/>
+                                                        <state key="normal" image="CheckBoxEmpty"/>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="パスワードを表示する" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j4c-jk-SIR">
                                                         <rect key="frame" x="32" y="0.0" width="270" height="24"/>
@@ -166,7 +166,7 @@
         </designable>
     </designables>
     <resources>
-        <image name="Check_Off_Box" width="15" height="15"/>
+        <image name="CheckBoxEmpty" width="16" height="16"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
