--- a/BookManager/Presentation/Screen/Signup/Base.lproj/SignupViewController.storyboard
+++ b/BookManager/Presentation/Screen/Signup/Base.lproj/SignupViewController.storyboard
@@ -23,7 +23,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="QZU-5F-nop">
                                         <rect key="frame" x="0.0" y="0.0" width="302" height="80"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="No_Image" translatesAutoresizingMaskIntoConstraints="NO" id="J0e-qL-XVB">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NoImage" translatesAutoresizingMaskIntoConstraints="NO" id="J0e-qL-XVB">
                                                 <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="80" id="ABm-T2-7nW"/>
@@ -144,7 +144,7 @@
                                                             <constraint firstAttribute="width" constant="24" id="Owk-B3-6a5"/>
                                                             <constraint firstAttribute="height" constant="24" id="oEG-h3-YQ8"/>
                                                         </constraints>
-                                                        <state key="normal" image="Check_Off_Box"/>
+                                                        <state key="normal" image="CheckBoxEmpty"/>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="パスワードを表示する" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4B-mK-qUL">
                                                         <rect key="frame" x="32" y="0.0" width="270" height="24"/>
@@ -258,8 +258,8 @@
         </designable>
     </designables>
     <resources>
-        <image name="Check_Off_Box" width="15" height="15"/>
-        <image name="No_Image" width="150" height="150"/>
+        <image name="CheckBoxEmpty" width="16" height="16"/>
+        <image name="NoImage" width="128" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
