--- a/BookManager/Presentation/View/KeyboardAccessory/KeyboardAccessoryView.xib
+++ b/BookManager/Presentation/View/KeyboardAccessory/KeyboardAccessoryView.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KeyboardAccessoryView" customModule="BookList_iOS" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KeyboardAccessoryView" customModule="BookManager" customModuleProvider="target">
             <connections>
                 <outlet property="sendButton" destination="RiC-Ge-Lc6" id="3iM-w3-JWa"/>
                 <outlet property="sendTextView" destination="tmY-AB-acX" id="yYg-jD-U08"/>
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="396" height="95"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="メッセージ送信用" translatesAutoresizingMaskIntoConstraints="NO" id="tmY-AB-acX" customClass="IBDesignableTextView" customModule="BookList_iOS" customModuleProvider="target">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="メッセージ送信用" translatesAutoresizingMaskIntoConstraints="NO" id="tmY-AB-acX" customClass="IBDesignableTextView" customModule="BookManager" customModuleProvider="target">
                     <rect key="frame" x="10" y="10" width="334" height="75"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <color key="textColor" systemColor="labelColor"/>
@@ -41,13 +41,13 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </textView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RiC-Ge-Lc6" customClass="IBDesignableButton" customModule="BookList_iOS" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RiC-Ge-Lc6" customClass="IBDesignableButton" customModule="BookManager" customModuleProvider="target">
                     <rect key="frame" x="354" y="53" width="32" height="32"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="RiC-Ge-Lc6" secondAttribute="height" id="JR4-Jg-r0U"/>
                         <constraint firstAttribute="width" constant="32" id="cfB-th-K6x"/>
                     </constraints>
-                    <state key="normal" image="Send"/>
+                    <state key="normal" image="AddUser"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                             <real key="value" value="15"/>
@@ -71,14 +71,14 @@
     </objects>
     <designables>
         <designable name="RiC-Ge-Lc6">
-            <size key="intrinsicContentSize" width="16" height="22"/>
+            <size key="intrinsicContentSize" width="32" height="32"/>
         </designable>
         <designable name="tmY-AB-acX">
             <size key="intrinsicContentSize" width="138" height="40"/>
         </designable>
     </designables>
     <resources>
-        <image name="Send" width="16" height="16"/>
+        <image name="AddUser" width="32" height="32"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
